# vegapull

./: .gitignore  Cargo.toml  README.md  pull_all.sh
.github/workflows/: rust.yml
config/: asia_en.toml  en.toml
data/english/: cards_569001.json  cards_569002.json  cards_569003.json  cards_569004.json  cards_569005.json  cards_569006.json  cards_569007.json  cards_569008.json  cards_569009.json  cards_569010.json  cards_569011.json  cards_569012.json  cards_569013.json  cards_569014.json  cards_569015.json  cards_569016.json  cards_569017.json  cards_569018.json  cards_569019.json  cards_569020.json  cards_569021.json  cards_569023.json  cards_569024.json  cards_569025.json  cards_569026.json  cards_569027.json  cards_569028.json  cards_569101.json  cards_569102.json  cards_569103.json  cards_569104.json  cards_569105.json  cards_569106.json  cards_569107.json  cards_569108.json  cards_569109.json  cards_569110.json  cards_569111.json  cards_569112.json  cards_569201.json  (+5 more)
locales/: jp.toml
scripts/: pull-all-gum.sh  pull-all.sh  pull.go  unpack.go
src/: card.rs  card_scraper.rs  card_set.rs  cli.rs  data.rs  interactive.rs  localizer.rs  main.rs  op_data.rs  op_scraper.rs  pack.rs  scraper.rs  storage.rs
src/card/: attribute.rs  category.rs  color.rs  mod.rs  model.rs  rarity.rs  scraper.rs
