[package]
name = "op-tcg-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
toml = "0.8.19"
