[package]
name = "vegapull"
version = "0.1.0"
authors = ["Coko <91132775+Coko7@users.noreply.github.com>"]
edition = "2021"
description = "Command line tool for scraping data for the One Piece Trading Card Game"
readme = "README.md"
homepage = "https://github.com/Coko7/vegapull"
repository = "https://github.com/Coko7/vegapull"
license = "GPL-3.0-only"
keywords = ["cli", "one-piece", "tcg", "manga", "scraper"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
toml = "0.8.19"
